2002-06-10  Duncan Mak  <duncan@ximian.com>

	* IEvidenceFactory.cs (Evidence): Added missing method.
	
	* SuppressUnmanagedCodeSecurityAttribute.cs:
	* UnverifiableCodeAttribute.cs: Added missing
	AttributeUsage attribute.

2002-06-05  Nick Drochak  <ndrochak@gol.com>

	* SecurityElement.cs: Fixed couple of hard to spot typos which were
	causing valid names and keys to be rejected.

2002-04-28  Lawrence Pit <loz@cable.a2000.nl>

	* CodeAccessPermission.cs : implemented ToString method

2002-04-27  Lawrence Pit <loz@cable.a2000.nl>

	* SecurityElement.cs: fixed bugs, implemented several methods

2002-03-12  Duncan Mak  <duncan@ximian.com>

	* SecurityException.cs: Inherit from SystemException, not Exception.

2002-02-23  Nick Drochak  <ndrochak@gol.com>

	* SecurityElement.cs: fixed typo

2002-02-13  Dan Lewis <dihlewis@yahoo.co.uk>
	
	* NamedPermissionSet.cs: New file (stub)

2002-02-07  Duncan Mak  <duncan@ximian.com>

	* SecurityException.cs: Reformatted to fit the form of other
	Exceptions. Added serialization bits.

2002-01-05  Ravi Pratap  <ravi@ximian.com>

	* SecurityElement.cs : Insert MonoTODO attribute.

2002-01-02  Nick Drochak  <ndrochak@gol.com>

	* CodeAccessPermission.cs: Fix syntax error hidden by exclusion in .build file

2001-12-30  Nick Drochak  <ndrochak@gol.com>

	* PermissionSet.cs SecurityManager.cs: New Files
	* CodeAccessPermission.cs: Add Skeleton code
	* IPermission.cs: Make public and inherit from ISecurityEncodable 
	* ISecurityEncodable.cs: Make interface public
	* ISecurityPolicyEncodable.cs: Ditto
	* IStackWalk.cs: Ditto

2001-12-29  Nick Drochak  <ndrochak@gol.com>

	* ISecurityPolicyEncodable.cs, PolicyLevelType.cs, 
	SecurityZone.cs, SecurityException.cs, UnverifiableCodeAttribute.cs,
	SuppressUnmanagedCodeSecurityAttribute.cs,
	VerificationException.cs, XmlSyntaxException.cs: New files

2001-12-21  Miguel de Icaza  <miguel@ximian.com>

	* SecurityElement.cs, CodeAccessPermission.cs IPermission.cs